# casper-wasmi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benches.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: host_error.rs  value.rs  vmem.rs
examples/: interpret.rs  invoke.rs  tictactoe.rs
fuzz/fuzz_targets/: load.rs  load_spec.rs  load_wabt.rs  load_wasmparser.rs
hfuzz/src/: main.rs
src/: func.rs  global.rs  host.rs  imports.rs  isa.rs  lib.rs  module.rs  pwasm.rs  runner.rs  table.rs  types.rs
src/memory/: mmap_bytebuf.rs  mod.rs
src/prepare/: compile.rs  mod.rs  tests.rs
tests/: spec_shim.rs
tests/e2e/v0/: host.rs  mod.rs  wasm.rs
tests/e2e/v1/: func.rs
tests/e2e/wat/: accumulate_u8.wast  inc_i32.wast
tests/spec/v0/: mod.rs  run.rs
tests/spec/v1/: context.rs  run.rs
validation/: Cargo.toml
validation/src/: context.rs  func.rs  lib.rs  tests.rs  util.rs
wasmi_v1/: Cargo.toml
wasmi_v1/src/: lib.rs  linker.rs
wasmi_v1/src/engine/: exec_context.rs  func_args.rs  func_types.rs  mod.rs  traits.rs  value_stack.rs
wasmi_v1/src/engine/bytecode/: mod.rs
wasmi_v1/src/engine/func_builder/: locals_registry.rs  mod.rs  value_stack.rs
wasmi_v1/src/func/: into_func.rs  mod.rs  typed_func.rs
wasmi_v1/src/memory/: buffer_vmem.rs  mod.rs
wasmi_v1/src/module/: init_expr.rs  tests.rs  utils.rs
wasmi_v1/src/module/instantiate/: mod.rs
