[package]
name = "wasmi-validation"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/paritytech/wasmi"
description = "Wasm code validator"

[dependencies]
casper-wasm = { package = "parity-wasm", default-features = false, git = "https://github.com/casper-network/casper-wasm/", branch = "main" }

[dev-dependencies]
assert_matches = "1.1"

[features]
default = ["std"]
std = ["casper-wasm/std"]
