[package]
name = "casper-wasmi-validation"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/casper-network/casper-wasmi"
description = "Wasm code validator"

[dependencies]
casper-wasm = { version = "0.46.0", default-features = false }

[dev-dependencies]
assert_matches = "1.1"

[features]
default = ["std"]
std = ["casper-wasm/std"]
sign_ext = ["casper-wasm/sign_ext"]
