[package]
name = "wasmi_v1"
version = "0.11.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin.freyler@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/casper-network/casper-wasmi"
documentation = "https://docs.rs/casper-wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]

[dependencies]
wasmparser = { version = "0.83", package = "wasmparser-nostd", default-features = false }
casper-wasmi-core = { version = "0.2.1", path = "../core", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
wat = "1"

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = [
    "casper-wasmi-core/std",
    "wasmparser/std",
    "spin/std",
]
# Enables OS supported virtual memory.
#
# Note
#
# - This feature is only supported on 64-bit platforms.
#   For 32-bit platforms the linear memory will fallback to using the Vec
#   based implementation.
# - The default is to fall back is an inefficient vector based implementation.
# - By nature this feature requires `region` and the Rust standard library.
virtual_memory = ["casper-wasmi-core/virtual_memory", "std"]
